# src/web/handler/das.ts
@@ -1,6 +1,7 @@
 import { Request, Response } from "express";
 import { IDasGateway } from "../../messaging/gateway/das";
 import { Mei } from "../../model/mei";
+import { Das } from "../../model/das";
 
 interface IDasHandler {
   sendDas(req: Request, res: Response): void;
@@ -12,8 +13,10 @@ class DasHandler implements IDasHandler {
   }
 
   async sendDas(req: Request, res: Response) {
-    const { cnpj, email } = req.body;
-    const mei = new Mei(cnpj, email);
+    const { cnpj, email, year, month } = req.body;
+    const das = new Das(year, month);
+    const mei = new Mei(cnpj, email, das);
+    
     await this.gateway.sendDas(mei);
     
     return res.status(200).end();
